fix weather icon alignment issues; replace wttr emoji with nerd-icon

--- a/dotfiles/dot-config/waybar/style.css
+++ b/dotfiles/dot-config/waybar/style.css
@@ -66,7 +66,7 @@ window#waybar {
 #memory,
 #clock,
 #custom-weather {
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 #network {
